--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,78 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <meta charset="UTF-8">
-    <title>Gruppspel</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Arvids Amongus E</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #222;
+            color: #eee;
+            text-align: center;
+            margin: 0;
+            padding: 20px;
+        }
+        #traitorBox {
+            display: none;
+            background: rgba(255, 0, 0, 0.3);
+            border: 2px solid red;
+            border-radius: 10px;
+            padding: 20px;
+            margin-top: 20px;
+            max-width: 300px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        #traitorBox h2 {
+            margin: 0 0 10px 0;
+            font-size: 1.5rem;
+            color: red;
+        }
+        #traitorList {
+            list-style: none;
+            padding-left: 0;
+            font-size: 1.2rem;
+        }
+        #playerList ul {
+            list-style: none;
+            padding-left: 0;
+        }
+        #startBtn {
+            display: none;
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 1.1rem;
+            cursor: pointer;
+        }
+        input, button {
+            font-size: 1rem;
+            padding: 8px;
+            margin: 5px;
+            border-radius: 5px;
+            border: none;
+        }
+        input {
+            width: 200px;
+        }
+        #executionerBox {
+            /* This is handled inline in client.js, no CSS needed here */
+        }
+    </style>
 </head>
 <body>
-    <div id="center-text">AAE</div>
-
-    <h1>Gruppspel</h1>
-    <input id="nameInput" type="text" placeholder="Ditt namn">
-    <input id="roomInput" type="text" placeholder="Rumskod">
-    <button id="joinBtn">Gå med i spel</button>
+    <h1>Arvids Amongus E</h1>
+    <div>
+        <input id="nameInput" type="text" placeholder="Skriv ditt namn" />
+        <input id="roomInput" type="text" placeholder="Rumskod" />
+        <button id="joinBtn">Gå med i spel</button>
+    </div>
 
     <div id="playerList"></div>
-    <button id="startBtn" style="display:none;">Starta spelet</button>
+    <button id="startBtn">Starta spelet</button>
 
-    <div id="traitorBox" style="display:none;">
+    <div id="traitorBox">
         <h2>Dina medförrädare:</h2>
         <ul id="traitorList"></ul>
     </div>
