--- a/public/index.html
+++ b/public/index.html
@@ -1,53 +1,62 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AAE - Arvids Amongus</title>
-    <style>
-        body { font-family: Arial, sans-serif; background: #222; color: #eee; text-align: center; padding: 20px; }
-        #traitorBox, #executionerBox {
-            position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);
-            background-color: rgba(255,0,0,0.85); color: white; padding: 20px; border-radius: 10px;
-            font-size: 1.8rem; text-align: center; z-index: 9999; display: none; pointer-events: none;
-        }
-        #playerList { margin-top: 20px; text-align: left; max-width: 300px; margin-left: auto; margin-right: auto; }
-        #traitorSliderContainer { margin-top: 20px; background: #333; padding: 10px; border-radius: 8px; display: none; }
-        #roomCodeDisplay {
-            font-size: 1.1rem; font-weight: bold; background: #333; padding: 8px 12px; border-radius: 6px;
-            display: none; margin: 12px auto;
-        }
-        input, button { font-size: 1rem; padding: 8px; margin: 5px; border-radius: 5px; border: none; }
-    </style>
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>AAE - Arvids Amongus</title>
+<style>
+    body { font-family: Arial, sans-serif; background: #222; color: #eee; text-align: center; padding: 20px; }
+    #traitorBox, #executionerBox { 
+        position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);
+        background-color: rgba(255,0,0,0.85); color: white; padding: 20px; border-radius: 10px;
+        font-size: 1.8rem; text-align: center; z-index: 9999; display: none; pointer-events: none;
+    }
+    #playerList { margin-top: 20px; text-align: left; max-width: 300px; margin-left: auto; margin-right: auto; }
+    #traitorSliderContainer { margin-top: 20px; background: #333; padding: 10px; border-radius: 8px; display: none; }
+    #roomCodeDisplay { font-size: 1.1rem; font-weight: bold; background: #333; padding: 8px 12px; border-radius: 6px; display: none; margin: 12px auto; }
+    input, button { font-size: 1rem; padding: 8px; margin: 5px; border-radius: 5px; border: none; }
+    #resetBtn { margin-top: 10px; display: none; }
+    #winnerSelection { display:none; background:#333; padding:15px; border-radius:10px; max-width:300px; margin:10px auto; text-align:left; }
+    #winnerSelection li { padding:5px; cursor:pointer; border-radius:4px; margin-bottom:4px; }
+    #winnerSelection li.selected { border:2px solid white; opacity:0.6; }
+    #scoreBoard { margin-top:20px; }
+</style>
 </head>
 <body>
-    <h1>AAE - Arvids Amongus Experience</h1>
+<h1>AAE - Arvids Amongus Experience</h1>
 
-    <div id="joinMenu">
-        <input type="text" id="nameInput" placeholder="Skriv ditt namn" />
-        <input type="text" id="roomInput" placeholder="Rumskod" />
-        <button id="joinBtn">Gå med i spel</button>
-    </div>
+<div id="joinMenu">
+    <input type="text" id="nameInput" placeholder="Skriv ditt namn" />
+    <input type="text" id="roomInput" placeholder="Rumskod" />
+    <button id="joinBtn">Gå med i spel</button>
+</div>
 
-    <div id="roomCodeDisplay"></div>
+<div id="roomCodeDisplay"></div>
+<div id="playerList" style="display:none"></div>
+<button id="startBtn" style="display:none">Starta spelet</button>
+<div id="traitorSliderContainer">
+    <label for="traitorSlider">Antal förädare:</label>
+    <input type="range" id="traitorSlider" min="1" max="3" value="2" />
+    <span id="traitorCount">2</span>
+</div>
+<button id="resetBtn">Återställ spel</button>
 
-    <div id="playerList" style="display:none"></div>
-    <button id="startBtn" style="display:none">Starta spelet</button>
+<div id="winnerSelection">
+    <h3>Välj vinnare:</h3>
+    <ul id="winnerList"></ul>
+    <button id="confirmWinnerBtn">Ok</button>
+</div>
 
-    <div id="traitorSliderContainer">
-        <label for="traitorSlider">Antal förädare:</label>
-        <input type="range" id="traitorSlider" min="1" max="3" value="2" />
-        <span id="traitorCount">2</span>
-    </div>
+<div id="scoreBoard"></div>
 
-    <div id="traitorBox">
-        <h2>Förädare</h2>
-        <p>Dina medspelare:</p>
-        <ul id="traitorList"></ul>
-    </div>
+<div id="traitorBox">
+    <h2>Förädare</h2>
+    <p>Dina medspelare:</p>
+    <ul id="traitorList"></ul>
+</div>
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="client.js"></script>
+<script src="/socket.io/socket.io.js"></script>
+<script src="client.js"></script>
 </body>
 </html>
